# agents_ai

./: .gitignore  README.md  pyproject.toml  pyproject_generated.toml
crewai-local-llm/llama3_1_markdown_example/: MarkdownTools.py  main.py
crewai-local-llm/setup/: create-llama3-1-model-file.sh
wom/src/: .gitignore  Ollama_check.ipynb  agents.py  agents.yaml  casaai_config.yaml  main.py  main_all.py  main_all_notebook.ipynb  main_all_notebook_v2.ipynb  main_all_notebook_v4.ipynb  main_all_notebook_v5.ipynb  main_all_notebook_v6.ipynb  mgr_llm_tools_check.ipynb  reddit_helper.py  reddit_pull.ipynb  tasks.py  tasks.yaml
wom/src/tools/: reddit_search.py
